# lick-sensor-for-rodents

./: .gitignore  README.md
bottle-x1-bnc-out/: CMakeLists.txt  README.md  lick_gpio_single.c
bottle-x1-bnc-out/pcb/: bottle-x1-bnc-out.kicad_pcb  bottle-x1-bnc-out.kicad_pro  bottle-x1-bnc-out.kicad_sch
bottle-x12-usb-out/: CMakeLists.txt  README.md  lick_events_reader.py  lick_events_usb.c
bottle-x12-usb-out/pcb/: bottle-x12-usb-out.kicad_pcb  bottle-x12-usb-out.kicad_pro  bottle-x12-usb-out.kicad_sch
bottle-x24-usb-out/: CMakeLists.txt  README.md  lick_events_reader.py  lick_two_sensors.c
bottle-x24-usb-out/pcb/: bottle-x24-usb-out.kicad_pcb  bottle-x24-usb-out.kicad_pro  bottle-x24-usb-out.kicad_sch
bottle-x6-bnc-out/: CMakeLists.txt  README.md  lick_bnc_multiple.c
bottle-x6-bnc-out/pcb/: bottle-x6-bnc-out.kicad_pcb  bottle-x6-bnc-out.kicad_pro  bottle-x6-bnc-out.kicad_sch
docs/: material.md
prototype/: README.md
prototype/app/: CMakeLists.txt  main.c  settings.c  settings.h  test.c
prototype/docs/: instructions.tex
prototype/pcb/: lick-sensor.kicad_pcb  lick-sensor.kicad_pro  lick-sensor.kicad_sch  materials.csv
utils/: events-to-long.py
utils/plotter/: README.md  main.py  pyproject.toml
utils/plotter/ui/: main.ui  resources_rc.py  ui_main.py
utils/test-sensor-settings/: CMakeLists.txt  test_sensor_settings.c
